# local-reranker

./: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
openspec/: project.md
openspec/changes/implement-mlx-reranker/: design.md  proposal.md  tasks.md
openspec/changes/implement-mlx-reranker/specs/mlx-reranker/: spec.md
openspec/changes/refactor-pluggable-reranker/: design.md  proposal.md  tasks.md
openspec/changes/refactor-pluggable-reranker/specs/reranker/: spec.md
openspec/changes/review-cli-module/: design.md  proposal.md  tasks.md
openspec/changes/review-cli-module/specs/cli-testing/: spec.md
src/local_reranker/: __init__.py  api.py  cli.py  config.py  reranker.py  reranker_mlx.py  reranker_pytorch.py
tests/: test_api.py  test_cli.py  test_cli_integration.py  test_mlx_integration.py  test_mlx_reranker.py  test_reranker.py
