[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-reranker"
version = "0.2.0"
authors = [
  { name="Olaf Geibig", email="olaf@pobox.com" }, 
]
description = "A lightweight, local reranker API implementation compatible with Jina."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

keywords = ["reranker", "local", "api", "rag", "nlp", "machine learning"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.5.0",
    "transformers>=4.57.0",
    "tokenizers>=0.21.0",
    "accelerate>=1.2.0",
    "einops>=0.8.0",
    "mlx>=0.30.0",
    "mlx-lm>=0.28.0",
    "safetensors>=0.5.0",
] 

[project.urls]
"Homepage" = "https://github.com/olafgeibig/local-reranker" 
"Bug Tracker" = "https://github.com/olafgeibig/local-reranker/issues" 

[project.scripts]
local-reranker = "local_reranker.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may require network or external services)",
    "slow: marks tests as slow (may take more time to run)",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.14.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
]
